# SkyMiner-Codex

./: .env.example  .gitignore  ARCHITECTURE_CONTRACTS.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  pyproject.toml
config/: default.yaml
data/raw/: sample_lightcurve.csv
docs/: NEXT_VERSION_CHECKLIST.md
src/skyminer/: __init__.py  __main__.py  cli.py  config.py  logging_config.py
src/skyminer/detection/: __init__.py  anomaly.py  periodicity.py  scoring.py
src/skyminer/features/: __init__.py  timeseries.py
src/skyminer/ingestion/: __init__.py  base.py  historical_stub.py  mast_recent.py  tess.py  tess_product_sample.py  tic_catalog.py
src/skyminer/models/: __init__.py  schemas.py
src/skyminer/persistence/: __init__.py  database.py  repositories.py
src/skyminer/pipeline/: __init__.py  runner.py
src/skyminer/preprocessing/: __init__.py  cleaning.py  normalization.py
src/skyminer/reporting/: __init__.py  dashboard.py  email_prep.py  plots.py  report_generator.py  run_summary.py
src/skyminer/utils/: __init__.py  coordinates.py  io.py  retry.py
src/skyminer/validation/: __init__.py  catalogs.py
tests/: test_config.py  test_dashboard.py  test_detection.py  test_email_prep.py  test_features.py  test_mast_recent.py  test_pipeline_smoke.py  test_preprocessing.py  test_tess_product_sample.py  test_tic_catalog.py  test_validation.py
